--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://34.57.239.207:3306/mydb?connectTimeout=5000
+spring.datasource.url=jdbc:mysql://34.57.239.207:3306/mydb?allowPublicKeyRetrieval=true&useSSL=false&connectTimeout=5000
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=myuser
 spring.datasource.password=mypassword
